Fixed Scrollbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,7 +34,9 @@ body {
     transition: 0.3s linear;
 }
 
-#header, #form, #datetime {
+#header,
+#form,
+#datetime {
     margin: 0 1rem;
     min-height: 10vh;
     width: 100%;
@@ -68,7 +70,7 @@ body {
     width: 35px;
 }
 
-.theme-selector:hover { 
+.theme-selector:hover {
     box-shadow: white 0 0 8px;
     cursor: pointer;
 }
@@ -93,41 +95,56 @@ body {
 #title {
     border-right: solid 3px rgba(0, 0, 0, 0.75);
     white-space: pre;
-    overflow: hidden;     
+    overflow: hidden;
     letter-spacing: 0.20rem;
     margin-top: 50px;
     margin-bottom: 20px;
     max-width: 480px;
-  }
-  
-  /* Animation */
+}
+
+/* Animation */
 #title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both,
-        animated-cursor 750ms steps(11,end) infinite;
-  }
+    animation: animated-text 2s steps(11, end) 0.5s 1 normal both,
+        animated-cursor 750ms steps(11, end) infinite;
+}
 
 #title.darker-title {
-    animation: animated-text 2s steps(11,end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11,end) infinite;
+    animation: animated-text 2s steps(11, end) 0.5s 1 normal both, darker-animated-cursor 750ms steps(11, end) infinite;
 }
-  
-  /* text animation */
-  
-  @keyframes animated-text{
-    from{width: 0%;}
-    to{width: 480px;}
-  }
-  
-  /* cursor animations */
-  
-  @keyframes animated-cursor{
-    from{border-right-color: rgba(0, 0, 0, 0.75);}
-    to{border-right-color: transparent;}
-  }
 
-  @keyframes darker-animated-cursor {
-    from{border-right-color: #01394c;}
-    to{border-right-color: transparent;}
-  }
+/* text animation */
+
+@keyframes animated-text {
+    from {
+        width: 0%;
+    }
+
+    to {
+        width: 480px;
+    }
+}
+
+/* cursor animations */
+
+@keyframes animated-cursor {
+    from {
+        border-right-color: rgba(0, 0, 0, 0.75);
+    }
+
+    to {
+        border-right-color: transparent;
+    }
+}
+
+@keyframes darker-animated-cursor {
+    from {
+        border-right-color: #01394c;
+    }
+
+    to {
+        border-right-color: transparent;
+    }
+}
 
 form {
     display: flex;
@@ -196,7 +213,7 @@ form input.darker-input:hover {
 
 button {
     border: none;
-    outline: none; 
+    outline: none;
     transition: box-shadow 200ms ease, background-color 200ms ease-in-out;
 }
 
@@ -249,7 +266,13 @@ form button {
 }
 
 .todo-list {
-    min-width: 25%;
+    scrollbar-width: none;
+    max-height: 400px;
+    /* Set the maximum height you want the list to have */
+    overflow-y: auto;
+    /* Enable vertical scrolling */
+    min-width: 100%;
+    /* overflow: hidden; */
 
     /* To remove the bullets of unordered list */
     list-style: none;
@@ -274,26 +297,28 @@ form button {
 }
 
 .light-todo {
-    background-color:#AEB1B4;
+    background-color: #AEB1B4;
 }
 
 .darker-todo {
     background-color: #01394c;
 }
 
-.todo li{
+.todo li {
     padding: 7px;
     /* word-wrap: break-word; */
     /* flex-wrap: wrap; */
     font-size: 20px;
-    flex: 1; /* To push the trash and the check button to the right */
+    flex: 1;
+    /* To push the trash and the check button to the right */
     border-radius: 30px;
 
     /* wraps the links */
     overflow-wrap: anywhere;
 }
 
-.check-btn, .delete-btn {
+.check-btn,
+.delete-btn {
     font-size: 19px;
     cursor: pointer;
     width: 2em;
@@ -306,7 +331,8 @@ form button {
     padding: 0rem 0.5rem;
 }
 
-.fa-trash, .fa-check { 
+.fa-trash,
+.fa-check {
     pointer-events: none;
 }
 
@@ -337,9 +363,9 @@ form button {
     }
 
     #title {
-        animation: 
-            animated-text 3s steps(16,end) 0.5s 1 normal both,
-            animated-cursor 750ms steps(16,end) infinite;
+        animation:
+            animated-text 3s steps(16, end) 0.5s 1 normal both,
+            animated-cursor 750ms steps(16, end) infinite;
         margin-bottom: 10px;
         margin-top: 30px;
         max-width: 330px;
@@ -352,9 +378,9 @@ form button {
     }
 
     #title {
-        animation: 
-            animated-text 3.5s steps(16,end) 0.5s 1 normal both,
-            animated-cursor 750ms steps(16,end) infinite;
+        animation:
+            animated-text 3.5s steps(16, end) 0.5s 1 normal both,
+            animated-cursor 750ms steps(16, end) infinite;
         max-width: 255px;
     }
 }
@@ -374,7 +400,8 @@ form button {
         margin-top: 15px;
         width: 50%;
     }
-    form > button.light-button {
+
+    form>button.light-button {
         box-shadow: 0 0 5px lightgray;
     }
 }
